gitops/config/vaultwarden/manifests/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: vaultwarden
  namespace: apps
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pass.nieri0x73.com
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: vaultwarden-tls
      hosts:
        - pass.nieri0x73.com
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - pass.nieri0x73.com
