gitops/config/vaultwarden/manifests/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: vaultwarden
  namespace: apps
spec:
  hosts:
    - pass.nieri0x73.com
  gateways:
    - vaultwarden
  http:
    - route:
        - destination:
            host: vaultwarden
            port:
              number: 80
